# vEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Header.h  Main.cpp  imgui.ini  vEngine.sln  vEngine.vcxproj  vEngine.vcxproj.filters
Component/BasicMove/: BasicMove.cpp  BasicMove.h
Component/Common/BasicMove/: BasicCameraMove.cpp  BasicCameraMove.h
Component/Common/EscExit/: PressEscExit.cpp  PressEscExit.h
Component/Envriment/Skybox/: Skybox.cpp  Skybox.h
Engine/: TypeDef.h  vEngine.cpp  vEngine.h
Engine/Core/: TextureCube.cpp  TextureCube.h
Engine/Core/Camera/: Camera.cpp  Camera.h
Engine/Core/CommonRenderCmd/: CommonRenderCmd.cpp  CommonRenderCmd.h
Engine/Core/Component/: Component.cpp  Component.h
Engine/Core/Component/SceneComponent/: SceneComponent.cpp  SceneComponent.h
Engine/Core/Container/: Name.cpp  Name.h  Transform.cpp  Transform.h
Engine/Core/Fence/: Fence.h
Engine/Core/FrameInfo/: FrameInfo.h  FrameRenderInfo.cpp  FrameRenderInfo.h  RenderInfo.h
Engine/Core/GlobalUniformBuffer/: GlobalUniformBufferManager.cpp  GlobalUniformBufferManager.h
Engine/Core/Gui/: GuiManager.cpp  GuiManager.h
Engine/Core/Level/: Level.cpp  Level.h
Engine/Core/Material/: Material.cpp  Material.h  MaterialRenderPipeline.cpp  MaterialRenderPipeline.h
Engine/Core/MemoryBuffer/: MemoryBuffer.cpp  MemoryBuffer.h  MeshVertexBuffer.cpp  MeshVertexBuffer.h
Engine/Core/Object/: Object.cpp  Object.h
Engine/Core/Object/ObjectHandle/: ObjectHandle.cpp  ObjectHandle.h
Engine/Core/Render/: RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  SceneComponentRenderInfo.cpp  SceneComponentRenderInfo.h
Engine/Core/Render/FrameBuffer/: FrameBufferData.cpp  FrameBufferData.h
Engine/Core/Render/RenderPass/: RenderPass.cpp  RenderPass.h  vRenderPass.cpp  vRenderPass.h
Engine/Core/Render/RenderPass/CombineSceneAndColorRenderPass/: CombineSceneAndColorRenderPass.cpp  CombineSceneAndColorRenderPass.h
Engine/Core/Render/RenderPostProcessing/: RenderPostProcessing.cpp  RenderPostProcessing.h
Engine/Core/Render/RenderThread/: RenderThread.h
Engine/Core/Render/Rendering/: IRendering.cpp  IRendering.h
Engine/Core/Render/Rendering/ForwardRendering/: ForwardRendering.cpp  ForwardRendering.h
Engine/Core/RenderCommandQueue/: RenderCommandQueue.cpp  RenderCommandQueue.h
Engine/Core/Semaphore/: Semaphore.h
Engine/Core/ShaderModule/: DescriptorHelper.cpp  DescriptorHelper.h  PipelineShader.cpp  PipelineShader.h  Shader.cpp  Shader.h
Engine/Core/ShaderReflector/: ShaderReflector.cpp  ShaderReflector.h
Engine/Core/Texture/Texture2D/: Texture2D.cpp  Texture2D.h
Engine/Core/Texture/TextureCube/: TextureCube.cpp  TextureCube.h
Engine/Core/Texture/TextureInterface/: ITexture.h
Engine/Core/Texture/TextureSampler/: TextureSampler.cpp  TextureSampler.h
Engine/Core/Texture2D/: Texture2D.cpp  Texture2D.h
Engine/Core/TextureInterface/: ITexture.cpp
Engine/Core/TextureSampler/: TextureSampler.cpp  TextureSampler.h
Engine/Core/UniformBuffer/: UniformBuffer.cpp  UniformBuffer.h
Engine/Core/UniformBuffer/GlobalUniformBuffer/: GlobalUniformBufferManager.cpp  GlobalUniformBufferManager.h
Engine/Runtime/Component/: CubeComponent.cpp  CubeComponent.h
Engine/Runtime/Component/Light/: PointLight.cpp  PointLight.h
Engine/SubSystem/AssetSystem/: AssetSystem.cpp  AssetSystem.h
Engine/SubSystem/InputSystem/: InputSysten.cpp  InputSysten.h
Engine/TextureFile/: TextureFile.cpp  TextureFile.h
Engine/Toolkit/: math_utils.cpp  math_utils.h
Engine/Toolkit/Container/: Queue.h
Engine/Toolkit/FileToolKit/: FileToolKit.cpp  FileToolKit.h  stb_image.cpp
Engine/Toolkit/SPIRV/: ShaderDecoder.cpp  ShaderDecoder.h
Engine/Toolkit/Timer/: Timer.cpp  Timer.h
Engine/VulkanHelper/: VkHelper.cpp  VkHelper.h
Level/Cube/: DrawCube.cpp  DrawCube.h  DrawCubeV2.cpp  DrawCubeV2.h  DrawLightCube.cpp  DrawLightCube.h  DrawTexCube.cpp  DrawTexCube.h
Level/Skybox/: DrawSkybox.cpp  DrawSkybox.h
Level/Tests/test_run_triangle/: test_run_triangle.cpp  test_run_triangle.h
Level/Triangle0/: Triangle0.cpp  Triangle0.h
Level/Triangle1/: Triangle1.cpp  Triangle1.h
LogPrinter/: Log.cpp  Log.h
Meshs/Box/: BoxVertices.cpp  CubeComponent.cpp  CubeComponent.cpp.bak
Shader/: CommonDef.hlsli  CommonFunction.hlsli  CommonStruct.hlsli  CompileShader-all.bat  CompileShader.bat  CompileShader.sh  GlobalUniformBuffer.hlsli  ReCompileShader.bat  ReCompileShader.sh  file_modification_times.json  test.sprv
Shader/CombineSceneUI/: CombineSceneUI_vs_ps.hlsl
Shader/DrawCube/: DrawCube.frag  DrawCube.vert  DrawCube_vs_fs.glsl  DrawCube_vs_ps.hlsl  DrawTexCube_vs_ps.hlsl  IncludeTest.glsli  PointLightCube_vs_ps.hlsl  UboTest.hlsli
Shader/PostProcessing/: Nothing_vs_ps.hlsl
Shader/Script/: ShaderIc.py  glsl_utils.py  hlsl_utils.py
Shader/ShaderCache/: DrawCube.frag.spv  DrawCube.vert.spv
Shader/SkyBox/: CommonSkyBox_vs_ps.hlsl
Shader/Triangle1/: Triangle1.vert
